welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:42: error: ':' expected but ',' found.
	def place(j,i) {
                   ^PictureMono2:67: error: identifier expected but '}' found.
}
^