welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
	def marquer() {
		baisseBrosse();
		leveBrosse();
	}
	def deux() {
		avance();
		marquer();
		avance();
		avance();
		marquer();
		avance();
	}
	def trois() {
		marquer();
		avance();
		avance();
		marquer();
		avance();
		avance();
		marquer();
	}
	def motif() {
		deux();
		gauche();
		avance();
		gauche();
		trois();
		droite();
		avance();
		droite();
		deux();
		gauche();
		avance();
		gauche();
		trois();
		droite();
		avance();
		droite();
		deux();
	}
	def place(j,i) {
		if (i!=3) {
			droite();
			avance();
			avance();
			avance();
			avance();
			gauche();
			avance();
		} else if (j!=3) {
			gauche();
			avance();
			gauche();
			for (k<- 1 to 14) {
				avance();
			}
			retourne();
		}
	}
	for (i<-1 to 3) {
		for (j<- 1 to 3) {
			motif();
			place(i,j);
		}
	}
}
